# rust_secure_dependency_audit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PUBLISH.md  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  custom_config.rs
src/: audit.rs  config.rs  error.rs  footprint.rs  lib.rs  license.rs  parser.rs  scoring.rs  types.rs
src/metadata/: crates_io.rs  github.rs  gitlab.rs  mod.rs  openssf.rs
tests/: cli_tests.rs
tests/fixtures/sample_project/: Cargo.toml
tests/fixtures/sample_project/src/: main.rs
